[gd_scene load_steps=8 format=3 uid="uid://b3xjpp1iy8g1s"]

[ext_resource type="Script" path="res://src/smoke.gd" id="1_4ndxv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdtrp"]
size = Vector2(44, 53)

[sub_resource type="Curve" id="Curve_i85cb"]
_data = [Vector2(0.0318182, 0.320755), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_clu7v"]
curve = SubResource("Curve_i85cb")

[sub_resource type="Curve" id="Curve_u62xj"]
min_value = -1.0
_data = [Vector2(0.0136364, -0.811321), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q6cq1"]
curve = SubResource("Curve_u62xj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uktnx"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 50.36
initial_velocity_max = 71.94
gravity = Vector3(0, 0, 0)
scale_min = 29.78
scale_max = 29.78
alpha_curve = SubResource("CurveTexture_clu7v")
hue_variation_min = 0.06
hue_variation_max = 0.06
hue_variation_curve = SubResource("CurveTexture_q6cq1")

[node name="smoke" type="Area2D"]
script = ExtResource("1_4ndxv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16.5)
shape = SubResource("RectangleShape2D_mdtrp")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.807843)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_uktnx")
one_shot = true
speed_scale = 0.45
explosiveness = 0.05

[node name="delay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
